--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.18.2",
     "config": "^1.26.1",
     "ejs": "~2.5.6",
+    "ethers": "^4.0.27",
     "express": "~4.15.2",
     "express-session": "^1.15.6",
     "ipfs-http-client": "^29.1.1",
